# Simple-perceptron

./: CMakeLists.txt  Data.txt  LICENSE  Main.qml  README.md  main.cpp
Backend/: Utils.cpp  Utils.h  classifier.cpp  classifier.h  perceptron.cpp  perceptron.h
UI/: PixelGrid.qml  RightPanel.qml
